# lista7-Pewciu6

./: lista.ipynb  pyproject.toml
