[project]
name = "lista7-pewciu6"
version = "0.1.0"
description = "Laboratorium 7: Klasteryzacja - Dry Bean Dataset"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
